<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  	<modelVersion>4.0.0</modelVersion>

  	<groupId>it.cnr.isti.hpclab</groupId>
  	<artifactId>terrier-eliasfano</artifactId>
  	<version>1.5</version>
  	<packaging>jar</packaging>
  	<name>Elias-Fano compression for Terrier 5</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
    	<maven.compiler.target>1.8</maven.compiler.target>
    	
    	<license.inceptionYear>2018</license.inceptionYear>
    	<license.organizationName>Nicola Tonellotto</license.organizationName>
	</properties>
    
    <licenses>
        <license>
          <name>GNU Lesser General Public License</name>
          <url>http://www.gnu.org/licenses/lgpl.txt</url>
          <distribution>manual</distribution>
        </license>
    </licenses>

	<developers>
		<developer>
			<id>khast</id>
			<email>nicola.tonellotto@isti.cnr.it</email>
			<name>Nicola Tonellotto</name>
		</developer>
	</developers>   
	   
  	<dependencies>

		<dependency>
      		<groupId>junit</groupId>
      		<artifactId>junit</artifactId>
      		<version>4.12</version>
      		<scope>test</scope>
    	</dependency>

	    <dependency>
          	<groupId>it.unimi.dsi</groupId>
          	<artifactId>dsiutils</artifactId>
          	<version>2.4.2</version>
    	</dependency>

    	<dependency>
      		<groupId>org.terrier</groupId>
      		<artifactId>terrier-core</artifactId>
      		<version>5.0</version>
    	</dependency>
    
    	<dependency>
    		<groupId>org.terrier</groupId>
    		<artifactId>terrier-batch-indexers</artifactId>
    		<version>5.0</version>
		</dependency>

		<!-- the following dependency should be remove when the submitted bug on MultiDocumentFileCollection and TRECCollection misplacement is resolved -->
    	<dependency>
    		<groupId>org.terrier</groupId>
    		<artifactId>terrier-batch-retrieval</artifactId>
    		<version>5.0</version>
    		<scope>test</scope>
		</dependency>

    	<dependency>
      		<groupId>args4j</groupId>
      		<artifactId>args4j</artifactId>
      		<version>2.32</version>
      		<type>jar</type>
      		<scope>compile</scope>
    	</dependency>

  	</dependencies>

  	<build>
    	<plugins>

      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>3.6.0</version>
        		<configuration>
          			<source>${maven.compiler.target}</source>
          			<target>${maven.compiler.source}</target>
          			<encoding>${project.build.sourceEncoding}</encoding>
        		</configuration>
      		</plugin>

      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-eclipse-plugin</artifactId>
        		<version>2.10</version>
        		<configuration>
          			<downloadSources>true</downloadSources>
          			<downloadJavadocs>true</downloadJavadocs>
        		</configuration>
      		</plugin>

      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-source-plugin</artifactId>
        		<version>3.0.1</version>
        		<executions>
          			<execution>
            			<id>attach-sources</id>
            			<goals>
              				<goal>jar</goal>
            			</goals>
          			</execution>
        		</executions>
      		</plugin>

      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-jar-plugin</artifactId>
        		<version>3.0.2</version>
        		<configuration>
          			<archive>
            			<manifest>
              				<addClasspath>true</addClasspath>
            			</manifest>
          			</archive>
        		</configuration>
      		</plugin>

      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-assembly-plugin</artifactId>
        		<version>3.0.0</version>
        		<configuration>
          			<descriptorRefs>
            			<descriptorRef>jar-with-dependencies</descriptorRef>
          			</descriptorRefs>
        		</configuration>
        		<executions>
          			<execution>
            			<id>make-assembly</id>
            			<phase>package</phase>
            			<goals>
              				<goal>single</goal>
            			</goals>
          			</execution>
        		</executions>
      		</plugin>

			<plugin>
        		<groupId>org.codehaus.mojo</groupId>
        		<artifactId>appassembler-maven-plugin</artifactId>
        		<version>1.10</version>
        		<configuration>
        			<assembleDirectory>${project.build.directory}</assembleDirectory>
          			<extraJvmArguments>-Xms1G -Xmx50G -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</extraJvmArguments>
          			<platforms>unix</platforms>
          			<projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
          			<programs>
            			<program>
              				<mainClass>it.cnr.isti.hpclab.ef.Generator</mainClass>
              				<name>ef-convert</name>
            			</program>
	          		</programs>
    	    	</configuration>
      		</plugin>
      		
    	</plugins>

  	</build>
  	
</project>